blog next/prev feature

--- a/blog-html/minify-photos-image-compression-page-speed.html
+++ b/blog-html/minify-photos-image-compression-page-speed.html
@@ -95,40 +95,42 @@
         compress pictures</b> and minify photos, let’s look at the "Tax" that unoptimized images
     pay on mobile networks.</p>
 
-<table>
-    <thead>
-        <tr>
-            <td><strong>Image State</strong></td>
-            <td><strong>File Size</strong></td>
-            <td><strong>Load Time (Slow 4G)</strong></td>
-            <td><strong>Impact on LCP</strong></td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td><span><b>Original
-                        (DSLR)</b></span></td>
-            <td><span>8.5 MB</span></td>
-            <td><span>12.0+ Seconds</span></td>
-            <td><span>Poor (Red)</span></td>
-        </tr>
-        <tr>
-            <td><span><b>Resized (No
-                        Compression)</b></span></td>
-            <td><span>1.2 MB</span></td>
-            <td><span>3.5 Seconds</span></td>
-            <td><span>Needs Improvement</span></td>
-        </tr>
-        <tr>
-            <td><span><b>Minified (via
-                        Compress Image Pro)</b></span></td>
-            <td><span>150 KB</span></td>
-            <td><span>0.4 Seconds</span></td>
-            <td><span><b>Good
-                        (Green)</b></span></td>
-        </tr>
-    </tbody>
-</table>
+    <div class="table-wrap">
+        <table>
+            <thead>
+                <tr>
+                    <td><strong>Image State</strong></td>
+                    <td><strong>File Size</strong></td>
+                    <td><strong>Load Time (Slow 4G)</strong></td>
+                    <td><strong>Impact on LCP</strong></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span><b>Original
+                                (DSLR)</b></span></td>
+                    <td><span>8.5 MB</span></td>
+                    <td><span>12.0+ Seconds</span></td>
+                    <td><span>Poor (Red)</span></td>
+                </tr>
+                <tr>
+                    <td><span><b>Resized (No
+                                Compression)</b></span></td>
+                    <td><span>1.2 MB</span></td>
+                    <td><span>3.5 Seconds</span></td>
+                    <td><span>Needs Improvement</span></td>
+                </tr>
+                <tr>
+                    <td><span><b>Minified (via
+                                Compress Image Pro)</b></span></td>
+                    <td><span>150 KB</span></td>
+                    <td><span>0.4 Seconds</span></td>
+                    <td><span><b>Good
+                                (Green)</b></span></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
 
 <h2>5. The Financial and Environmental Cost of Bloat</h2>
