--- a/blog-html/how-to-convert-images-to-webp-for-seo.html
+++ b/blog-html/how-to-convert-images-to-webp-for-seo.html
@@ -117,54 +117,56 @@
             difference is virtually unnoticeable.</p>
     </li>
 </ul>
-<table data-path-to-node="40">
-    <thead>
-        <tr>
-            <td><strong>Feature</strong></td>
-            <td><strong>WebP</strong></td>
-            <td><strong>JPEG</strong></td>
-            <td><strong>PNG</strong></td>
-            <td><strong>GIF</strong></td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td><span data-path-to-node="40,1,0,0"><b>Best Use</b></span></td>
-            <td><span data-path-to-node="40,1,1,0">Web performance</span></td>
-            <td><span data-path-to-node="40,1,2,0">Photography</span></td>
-            <td><span data-path-to-node="40,1,3,0">Graphics/Text</span></td>
-            <td><span data-path-to-node="40,1,4,0">Basic Animation</span></td>
-        </tr>
-        <tr>
-            <td><span data-path-to-node="40,2,0,0"><b>Transparency</b></span></td>
-            <td><span data-path-to-node="40,2,1,0">Yes</span></td>
-            <td><span data-path-to-node="40,2,2,0">No</span></td>
-            <td><span data-path-to-node="40,2,3,0">Yes</span></td>
-            <td><span data-path-to-node="40,2,4,0">Yes (1-bit)</span></td>
-        </tr>
-        <tr>
-            <td><span data-path-to-node="40,3,0,0"><b>Animation</b></span></td>
-            <td><span data-path-to-node="40,3,1,0">Yes</span></td>
-            <td><span data-path-to-node="40,3,2,0">No</span></td>
-            <td><span data-path-to-node="40,3,3,0">No</span></td>
-            <td><span data-path-to-node="40,3,4,0">Yes</span></td>
-        </tr>
-        <tr>
-            <td><span data-path-to-node="40,4,0,0"><b>Compression</b></span></td>
-            <td><span data-path-to-node="40,4,1,0">Lossy &amp; Lossless</span></td>
-            <td><span data-path-to-node="40,4,2,0">Lossy Only</span></td>
-            <td><span data-path-to-node="40,4,3,0">Lossless Only</span></td>
-            <td><span data-path-to-node="40,4,4,0">Lossless</span></td>
-        </tr>
-        <tr>
-            <td><span data-path-to-node="40,5,0,0"><b>Size</b></span></td>
-            <td><span data-path-to-node="40,5,1,0">Smallest</span></td>
-            <td><span data-path-to-node="40,5,2,0">Small</span></td>
-            <td><span data-path-to-node="40,5,3,0">Large</span></td>
-            <td><span data-path-to-node="40,5,4,0">Very Large</span></td>
-        </tr>
-    </tbody>
-</table>
+<div class="table-wrap">
+    <table data-path-to-node="40">
+        <thead>
+            <tr>
+                <td><strong>Feature</strong></td>
+                <td><strong>WebP</strong></td>
+                <td><strong>JPEG</strong></td>
+                <td><strong>PNG</strong></td>
+                <td><strong>GIF</strong></td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><span data-path-to-node="40,1,0,0"><b>Best Use</b></span></td>
+                <td><span data-path-to-node="40,1,1,0">Web performance</span></td>
+                <td><span data-path-to-node="40,1,2,0">Photography</span></td>
+                <td><span data-path-to-node="40,1,3,0">Graphics/Text</span></td>
+                <td><span data-path-to-node="40,1,4,0">Basic Animation</span></td>
+            </tr>
+            <tr>
+                <td><span data-path-to-node="40,2,0,0"><b>Transparency</b></span></td>
+                <td><span data-path-to-node="40,2,1,0">Yes</span></td>
+                <td><span data-path-to-node="40,2,2,0">No</span></td>
+                <td><span data-path-to-node="40,2,3,0">Yes</span></td>
+                <td><span data-path-to-node="40,2,4,0">Yes (1-bit)</span></td>
+            </tr>
+            <tr>
+                <td><span data-path-to-node="40,3,0,0"><b>Animation</b></span></td>
+                <td><span data-path-to-node="40,3,1,0">Yes</span></td>
+                <td><span data-path-to-node="40,3,2,0">No</span></td>
+                <td><span data-path-to-node="40,3,3,0">No</span></td>
+                <td><span data-path-to-node="40,3,4,0">Yes</span></td>
+            </tr>
+            <tr>
+                <td><span data-path-to-node="40,4,0,0"><b>Compression</b></span></td>
+                <td><span data-path-to-node="40,4,1,0">Lossy &amp; Lossless</span></td>
+                <td><span data-path-to-node="40,4,2,0">Lossy Only</span></td>
+                <td><span data-path-to-node="40,4,3,0">Lossless Only</span></td>
+                <td><span data-path-to-node="40,4,4,0">Lossless</span></td>
+            </tr>
+            <tr>
+                <td><span data-path-to-node="40,5,0,0"><b>Size</b></span></td>
+                <td><span data-path-to-node="40,5,1,0">Smallest</span></td>
+                <td><span data-path-to-node="40,5,2,0">Small</span></td>
+                <td><span data-path-to-node="40,5,3,0">Large</span></td>
+                <td><span data-path-to-node="40,5,4,0">Very Large</span></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 &nbsp;
 <h2 data-path-to-node="42">FAQs: Frequently Asked Questions About WebP</h2>
 <h3 data-path-to-node="43">1. Is WebP better than PNG?</h3>
