blog meta data added

--- a/blog-html/compress-images-wordpress-without-plugins.html
+++ b/blog-html/compress-images-wordpress-without-plugins.html
@@ -1,3 +1,8 @@
+<!--
+meta-title: Compress Images in WordPress Without Plugins (Easy Guide)
+meta-description: Learn how to compress images in WordPress without plugins to reduce image size, improve page speed, and boost SEO using simple, safe methods.
+meta-keywords: compress images, image compressor, compress photos
+-->
 <h1>How to Compress Images for WordPress Without Plugins</h1>
 <p data-path-to-node="1">In the world of web development, speed is king. If your website takes more than three seconds
 	to load, you are likely losing half of your visitors before they even see your content. The biggest culprit behind
