--- a/blog-html/how-to-convert-images-to-webp-for-seo.html
+++ b/blog-html/how-to-convert-images-to-webp-for-seo.html
@@ -1,3 +1,8 @@
+<!--
+meta-title: WebP Image Format Explained: Compress Images for Speed & SEO
+meta-description: Discover how WebP helps compress images, reduce photo size, and improve page load speed without losing quality. A complete beginner-friendly guide..
+meta-keywords: compress images, image compress, photo compressor
+-->
 <h1>The WebP Revolution: A Complete Guide to the Modern Image Format for Speed and SEO</h1>
 <p data-path-to-node="1">In the fast-paced world of digital marketing and web development, every millisecond counts. As
     users shift toward mobile browsing and Google tightens its standards for "Core Web Vitals," the weight of your
