--- a/blog-html/lossless-image-compression-guide.html
+++ b/blog-html/lossless-image-compression-guide.html
@@ -1,3 +1,8 @@
+<!--
+meta-title: Lossless Image Compression: Compress Images Without Quality Loss
+meta-description: Understand lossless image compression and learn how to compress photos and pictures without losing quality while improving website performance.
+meta-keywords: compress images, compress photo, compress pictures
+-->
 <h1>The Magic of Invisible Savings: A Deep Dive into Lossless Image Compression</h1>
 <p>In a world where high-definition visuals are the standard, the weight of our digital files is constantly growing.
     Whether you are a professional photographer preserving every detail of a sunset or a web developer trying to speed
