--- a/blog-html/minify-photos-image-compression-page-speed.html
+++ b/blog-html/minify-photos-image-compression-page-speed.html
@@ -1,3 +1,8 @@
+<!--
+meta-title: Minify Photos to Improve Page Speed (Image Compression Guide)
+meta-description: Learn how to minify photos using image compression techniques to reduce load time, improve Core Web Vitals, and create faster websites.
+meta-keywords: minify photos, image compression, compress photos
+-->
 <h1>Minify Photos Like a Pro: The Impact of Image Compression on Page Load Speed</h1>
 <p>In the modern digital landscape, speed is no longer a luxury—it is a survival metric. According
     to Google, as page load time goes from one second to three seconds, the probability of a visitor bouncing increases
