--- a/blog-html/understanding-image-compression-basics.html
+++ b/blog-html/understanding-image-compression-basics.html
@@ -1,3 +1,8 @@
+<!--
+meta-title: Image Compression Explained: Why Compress Images Matters
+meta-description: Understand what image compression is, how image compressors work, and why compressing images is essential for faster websites and better SEO.
+meta-keywords: image compression, compress images, image compressor
+-->
 <h1>Understanding Image Compression: What It Is and Why It Matters</h1>
 <p>In our visually driven world, images play a pivotal role in communication, marketing, and storytelling. Whether
     you’re a professional photographer, a graphic designer, or just someone who loves capturing moments, you’ve probably
